@@ -205,7 +205,7 @@
     <maven.pmd.plugin.version>3.15.0</maven.pmd.plugin.version>
     <pmd.version>6.41.0</pmd.version>
     <maven.jacoco.plugin.version>0.8.7</maven.jacoco.plugin.version>
-    <powermock.version>2.0.9</powermock.version>
+    <mockito.version>4.0.0</mockito.version>
     <saxon.version>10.6</saxon.version>
     <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
     <maven.sevntu.checkstyle.plugin.version>1.40.0</maven.sevntu.checkstyle.plugin.version>
@@ -289,13 +289,6 @@
       <version>1.5.0</version>
       <scope>test</scope>
     </dependency>
-    <!-- till https://github.com/checkstyle/checkstyle/issues/7368 -->
-    <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
@@ -316,23 +309,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito2</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- till https://github.com/checkstyle/checkstyle/issues/7368 -->
-    <dependency>
-      <groupId>org.javassist</groupId>
-      <artifactId>javassist</artifactId>
-      <version>3.28.0-GA</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- till https://github.com/checkstyle/checkstyle/issues/7368 -->
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${powermock.version}</version>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -1898,17 +1877,6 @@
   </reporting>
 
   <profiles>
-
-    <!-- Till https://github.com/powermock/powermock/issues/1094 -->
-    <profile>
-      <id>java16</id>
-      <activation>
-        <jdk>[16,)</jdk>
-      </activation>
-      <properties>
-        <surefire.options>--illegal-access=warn</surefire.options>
-      </properties>
-    </profile>
 
     <profile>
       <!-- To be used during development. Run the command -->
